# ddlog-lsp

./: Cargo.toml  search-index.js  settings.html  source-files.js
.github/workflows/: main.yaml
crates/cli/: Cargo.toml
crates/languages/: Cargo.toml
crates/macros/src/: lib.rs  (+3 more)
crates/server/: Cargo.toml
crates/syntax/: Cargo.toml
crates/testing/: Cargo.toml
crates/testing/src/: lsp.rs  service.rs
ddlog_lsp_server/: all.html  fn.capabilities.html  index.html  sidebar-items.js  struct.Server.html
ddlog_lsp_server/cli/: fn.cli.html  index.html  sidebar-items.js
ddlog_lsp_server/core/: enum.Error.html  enum.Language.html  enum.SessionResourceKind.html  index.html  sidebar-items.js  struct.ChunkWalker.html  struct.Document.html  struct.IntoJsonRpcError.html  struct.Position.html  struct.Session.html  struct.Text.html  struct.TextEdit.html  trait.RopeExt.html  trait.TreeExt.html
ddlog_lsp_server/handler/: index.html
ddlog_lsp_server/lsp/: index.html
ddlog_lsp_server/package/: index.html
ddlog_lsp_server/provider/: fn.diagnostics.html  index.html  sidebar-items.js
ddlog_lsp_server/server/: fn.capabilities.html  index.html  struct.Server.html
ddlog_lsp_server/service/: index.html
ddlog_lsp_server/util/: index.html  sidebar-items.js  struct.NodeWalker.html  struct.NodeWalkerStack.html
implementors/lspower/: trait.LanguageServer.js
implementors/tower_lsp/: trait.LanguageServer.js
src/ddlog_lsp_server/: cli.rs.html  core.rs.html  handler.rs.html  lib.rs.html  package.rs.html  provider.rs.html  server.rs.html  util.rs.html
xtask/src/: main.rs
(+986 files in other folders)
