[package]
edition = "2018"
name = "ddlog-lsp-testing"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ddlog-lsp/ddlog-lsp"
keywords = []
description = """
Testing support framework for the DDlog language server.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.28"
lspower = { version = "1.1", default-features = false }
serde_json = { version = "1.0", features = ["preserve_order"] }
tower-test = "0.4.0"
ddlog-lsp-server = { version = "0.0", path = "../server" }
